libhdate (0.21.0)
  
  * New spec file by Oron Peled
  * Diaspora holydays/readings
  * New sunrise sunset functions
  * New html examples
  * New configure options to build / not build the examples
  
   -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 25 Feb 2005 11:15:18

libhdate (0.17.0)
  
  * API chages.
  * base struct change.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 22 Feb 2005 19:34:22
   
libhdate (0.16.3)
  
  * Try to fix date conversion bug, thanks Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 21 Feb 2005 09:03:12

libhdate (0.16.2)
  
  * Syntax error, and weeks calculation bug fixed by Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 20 Feb 2005 06:53:12

libhdate (0.16.1)

  * Fix locale bug in int_to_string.
  * Add examples directory.
  * Minor bug fixes.

 -- Yaacov Zamir <kzamir@wall.co.il>  Sat, 19 Feb 2005 20:07:19